--- a/xzarsk03-contracts-for-concurrency.tex
+++ b/xzarsk03-contracts-for-concurrency.tex
@@ -18,43 +18,9 @@
 %   xzarsk03-contracts-for-concurrency-30-prilohy-appendices.tex - přílohy / appendices
 %   xzarsk03-contracts-for-concurrency-30-prilohy-appendices-en.tex - přílohy v angličtině / appendices in English
 %==============================================================================
-%\documentclass[]{fitthesis} % bez zadání - pro začátek práce, aby nebyl problém s překladem
-%\documentclass[english]{fitthesis} % without assignment - for the work start to avoid compilation problem
-%\documentclass[zadani]{fitthesis} % odevzdani do wisu a/nebo tisk s barevnými odkazy - odkazy jsou barevné
 \documentclass[english,zadani]{fitthesis} % for submission to the IS FIT and/or print with color links - links are color
-%\documentclass[english,zadani,odsaz,cprint]{fitthesis}
-%\documentclass[zadani,print]{fitthesis} % pro černobílý tisk - odkazy jsou černé
+%\documentclass[english,zadani,cprint]{fitthesis}
 %\documentclass[english,zadani,print]{fitthesis} % for the black and white print - links are black
-%\documentclass[zadani,cprint]{fitthesis} % pro barevný tisk - odkazy jsou černé, znak VUT barevný
-%\documentclass[english,zadani,cprint]{fitthesis} % for the print - links are black, logo is color
-% * Je-li práce psaná v anglickém jazyce, je zapotřebí u třídy použít 
-%   parametr english následovně:
-%   If thesis is written in English, it is necessary to use 
-%   parameter english as follows:
-%      \documentclass[english]{fitthesis}
-% * Je-li práce psaná ve slovenském jazyce, je zapotřebí u třídy použít 
-%   parametr slovak následovně:
-%   If the work is written in the Slovak language, it is necessary 
-%   to use parameter slovak as follows:
-%      \documentclass[slovak]{fitthesis}
-% * Je-li práce psaná v anglickém jazyce se slovenským abstraktem apod., 
-%   je zapotřebí u třídy použít parametry english a enslovak následovně:
-%   If the work is written in English with the Slovak abstract, etc., 
-%   it is necessary to use parameters english and enslovak as follows:
-%      \documentclass[english,enslovak]{fitthesis}
-
-% Základní balíčky jsou dole v souboru šablony fitthesis.cls
-% Basic packages are at the bottom of template file fitthesis.cls
-% zde můžeme vložit vlastní balíčky / you can place own packages here
-
-% Kompilace po částech (rychlejší, ale v náhledu nemusí být vše aktuální)
-% Compilation piecewise (faster, but not all parts in preview will be up-to-date)
-% \usepackage{subfiles}
-
-% Nastavení cesty k obrázkům
-% Setting of a path to the pictures
-%\graphicspath{{figures/}{./figures/}}
-%\graphicspath{{figures/}{../figures/}}
 
 %---rm---------------
 \renewcommand{\rmdefault}{lmr}%zavede Latin Modern Roman jako rm / set Latin Modern Roman as rm
@@ -73,6 +39,7 @@
 \usepackage{tikz}
 \usepackage{lipsum}
 \usepackage{tikz-uml}
+\usepackage{pgfplots}
 \usetikzlibrary{positioning}
 
 \usepackage{url}
